--- a/public/templates/public/base.html
+++ b/public/templates/public/base.html
@@ -452,19 +452,7 @@
             </div>
             <div id="chat" class="collapse chat-box-wrap shadow-reset animated zoomInLeft">
                 <div class="chat-main-list">
-                    <div class="chat-heading">
-                        <h2>SchoolBuzz Chatbot</h2>
-                    </div>
-                    <div class="chat-content chat-scrollbar">
-                        <div class="author-chat">
-                            <h3>UNSER <span class="chat-date">Now</span></h3>
-                            <p>Hello... </p>
-                        </div>
-                    </div>
-                    <div class="chat-send">
-                        <input type="text" placeholder="Type..." />
-                        <span><button type="submit">Send</button></span>
-                    </div>
+                        <iframe width="350" height="430" allow="microphone;" src="https://console.dialogflow.com/api-client/demo/embedded/f2b2f085-b9fe-494b-b6f4-8dd2b584e163"></iframe>
                 </div>
             </div>
         </div>
