Digital Marketing Updated

--- a/public/templates/public/base.html
+++ b/public/templates/public/base.html
@@ -232,7 +232,7 @@
                             <li class="nav-item dropdown">
                                 <a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="nav-link dropdown-toggle">Digital Market Place <span class="angle-down-topmenu"><i class="fa fa-angle-down"></i></span></a>
                                 <div role="menu" class="dropdown-menu">
-                                    <a href="" class="dropdown-item">Market Place</a>
+                                    <a href="{% url 'website-marketing' %}" class="dropdown-item">Market Place</a>
                                     <a href="{% url 'service-providers' %}" class="dropdown-item">Service Providers</a>
                                     <a href="{% url 'apply' %}" class="dropdown-item" style="background-color: red;">Apply to be listed</a>
                                 </div>
