Fixed some bugs in the market file

--- a/public/templates/public/market.html
+++ b/public/templates/public/market.html
@@ -8,12 +8,46 @@
                 <h3 style="text-align: center;"><b>Latest products in the Market</b></h3>
                 <hr>
             </div>
+        </div>    
+    </div>
+    <div class="row">
+        <div class="col-lg-3 shadow-reset" style="margin-top: 15px; margin-right: 15px;">
+            <img src="{% static 'img/car.jpg' %}" alt="" style="margin-top: 15px;" style="margin-bottom: 15px;">
+            <h5><b>Pickup Toyota</b></h5>
+            <p>Mbarara University of Science and Technology</p>
+            <a href="" style="color: green; font-weight: bolder;">Contact supplier</a>
+        </div>
+        <div class="col-lg-3 shadow-reset" style="margin-top: 15px; margin-right: 15px;">
+            <img src="{% static 'img/beans.jpg' %}" alt="" style="margin-top: 15px;" style="margin-bottom: 15px;">
+            <h5><b>Beans</b></h5>
+            <p>St Agnes Girls</p>
+            <a href="" style="color: green; font-weight: bolder;">Contact supplier</a>
+        </div>
+        <div class="col-lg-3 shadow-reset" style="margin-top: 15px; margin-right: 15px;">
+            <img src="{% static 'img/cow.jpg' %}" alt="" style="margin-top: 15px;" style="margin-bottom: 15px;">
+            <h5><b>Diary Cow</b></h5>
+            <p>Ankole Western University</p>
+            <a href="" style="color: green; font-weight: bolder;">Contact supplier</a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-3 shadow-reset" style="margin-top: 15px; margin-right: 15px;">
+            <img src="{% static 'img/mustbus.jpeg' %}" alt="" style="margin-top: 15px;" style="margin-bottom: 15px;">
+            <h5><b>Bus</b></h5>
+            <p>Mbarara University of Science and Technology</p>
+            <a href="" style="color: green; font-weight: bolder;">Contact supplier</a>
         </div>
         <div class="col-lg-3 shadow-reset" style="margin-top: 15px; margin-right: 15px;">
             <img src="{% static 'img/car.jpg' %}" alt="" style="margin-top: 15px;" style="margin-bottom: 15px;">
-                <h5><b>Pickup Toyota</b></h5>
-                <p>Mbarara University of Science and Technology</p>
-                <a href="" style="color: green; font-weight: bolder;">Contact supplier</a>
+            <h5><b>Posho</b></h5>
+            <p>Bishop Stuart University</p>
+            <a href="" style="color: green; font-weight: bolder;">Contact supplier</a>
+        </div>
+        <div class="col-lg-3 shadow-reset" style="margin-top: 15px; margin-right: 15px;">
+            <img src="{% static 'img/posho.jpg' %}" alt="" style="margin-top: 15px;" style="margin-bottom: 15px;">
+            <h5><b>Posho</b></h5>
+            <p>Mbarara Preparatory School Farm</p>
+            <a href="" style="color: green; font-weight: bolder;">Contact supplier</a>
         </div>
     </div>
 
