--- a/ministry/templates/ministry/base.html
+++ b/ministry/templates/ministry/base.html
@@ -790,7 +790,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="footer-copy-right">
-                        <p>Copyright &#169; 2020 UNSER All rights reserved. Designed and Powered by <a href="https://globalautosystems.co.ug">Glabal Auto Systems</a>.</p>
+                        <p>Copyright &#169; 2022 UNSER All rights reserved. Designed and Powered by <a href="https://globalautosystems.co.ug">Global Auto Systems</a>.</p>
                     </div>
                 </div>
             </div>
